// Copyright 2026 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.edpaggregator;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/internal/edpaggregator/raw_impression_batch_state.proto";
import "wfa/measurement/internal/edpaggregator/raw_impression_state.proto";

option java_package = "org.wfanet.measurement.internal.edpaggregator";
option java_multiple_files = true;

// Proto representation of the internal RawImpressionMetadata entity type.
message RawImpressionMetadata {
  string data_provider_resource_id = 1;
  string raw_impression_upload_id = 2;
  int64 batch_index = 3;
  int64 file_index = 4;

  string blob_uri = 5;

  // Lifecycle state for soft delete.
  RawImpressionState state = 6;

  // Processing state at the batch level.
  RawImpressionBatchState batch_state = 7;

  google.protobuf.Timestamp create_time = 8;
  google.protobuf.Timestamp update_time = 9;
}
